<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee4"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="85dp">

        <EditText
            android:id="@+id/nameOfCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintname"
            android:inputType="text" />

        <TextView
            android:id="@+id/toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/Top"
            android:textAllCaps="true"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">


            <CheckBox
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheck" />

            <TextView
                android:id="@+id/wip_crem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingStart="24dp"
                android:text="@string/wip_cream"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">


            <CheckBox
                android:id="@+id/check2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheck" />

            <TextView
                android:id="@+id/choco_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingStart="24dp"
                android:text="@string/choco_chip"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/decrement"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:onClick="decrement"
                android:paddingBottom="16dp"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/quantity_text_view"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="#000000" />

    </LinearLayout>
</ScrollView>
